Fix tab content being one pixel too low

In https://crrev.com/c/1121386 the tab's layout height was increased by
one dip to create an overlap between the tab and the toolbar.  The tab
content was then incorrectly laid out slightly lower as a result.  This
CL includes that space in the tab's content insets, so content is laid
out into the visible tab region as intended.

Bug: 863493
Change-Id: Iae13fb5bc9a726a1b9f29329ebecd23197b2b0fb
Reviewed-on: https://chromium-review.googlesource.com/1137353
Commit-Queue: Taylor Bergquist <tbergquist@chromium.org>
Reviewed-by: Bret Sepulveda <bsep@chromium.org>
Cr-Commit-Position: refs/heads/master@{#575458}
Former-commit-id: 4747cc23ae334a57a35ed3c8e6adcdbc8a50d479